--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <ul>
             <li><a href="index.html">Go to profile</a></li>
             <li><a href="projects.html">Go to projects</a></li>
-            <li><a href="https://www.linkedin.com/in/peter-bellaby-40b93022b/" target="_blank">My LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a></li>
         </ul>
     </nav>
     <header>
         <h1>My Profile</h1>
         <h2>Patrick Ardagh-Walter</h2>
         <p>A <em>emphasised</em> <strong>demonstration</strong> of a paragraph.</p>
-        <img src="images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." width="200px">
+        <img src="./Images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." width="200px">
     </header>
     <section>
         <h3>My Skills</h3>
