Somewhat prettified the index page

--- a/index.html
+++ b/index.html
@@ -15,40 +15,43 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="container">
         <ul>
-            <li><a href="index.html">Go to profile</a></li>
             <li><a href="projects.html">Go to projects</a></li>
             <li><a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a></li>
         </ul>
     </nav>
-    <header>
+    <header class="heading">
         <h1>My Profile</h1>
         <h2>Patrick Ardagh-Walter</h2>
         <p>A <em>emphasised</em> <strong>demonstration</strong> of a paragraph.</p>
-        <img src="./Images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." width="200px">
+        <img src="./Images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." class="centredImage">
     </header>
-    <section>
+    <section class="container">
         <h3>My Skills</h3>
-        <p>Agile and Scrum Methodology</p>
-        <p>Arguing</p>
-        <p>Piano</p>
+        <ul>
+            <li>Agile and Scrum Methodology</li>
+            <li>C# Programming</li>
+            <li>Source Control</li>
+        </ul>
     </section>
-    <section>
+    <section class="container">
         <h3>My Hobbies</h3>
         <ul>
             <li>Game Design</li>
             <li>Video Games</li>
             <li>Hiking</li>
+            <li>Piano</li>
+            <li>HEMA</li>
         </ul>
     </section>
-    <section>
+    <section class="container">
         <h3>My Goals</h3>
-        <ol>
-            <li>World Domination</li>
-            <li>Getting permanently employed</li>
-            <li>Forgetting about the infinity of the cosmos.</li>
-        </ol>
+        <ul>
+            <li>Permanent Employment</li>
+            <li>To publish a tabletop rpg</li>
+            <li>To grasp the fundamental meaning of reality</li>
+        </ul>
     </section>
     <footer>
         <h4>My Searchbar</h4>
