--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <title>My Profile</title>
 
     <!-- links to external resources-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="profileStyles.css" rel="stylesheet">
 </head>
 
 <body>
     <nav class="container">
-        <ul>
+        <ul class="flex-container">
             <li><a href="projects.html">Go to projects</a></li>
             <li><a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a></li>
         </ul>
