--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 </head>
 
 <body>
-    <nav class="container">
-        <ul class="flex-container">
-            <li><a href="projects.html">Go to projects</a></li>
-            <li><a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a></li>
-        </ul>
+    <nav>
+            <a href="projects.html">Go to projects</a>
+            <a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a>
+            <form action="https://www.google.com/search" target="_blank">
+                <label for="search">Search</label>
+                <input type="text" id="search" name="q">
+                <input type="submit" value="Submit">
+            </form>
     </nav>
     <header class="heading">
-        <h1>My Profile</h1>
         <h2>Patrick Ardagh-Walter</h2>
         <p>A <em>emphasised</em> <strong>demonstration</strong> of a paragraph.</p>
         <img src="./Images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." class="centredImage">
@@ -55,13 +57,6 @@
         </ul>
     </section>
     <footer>
-        <h4>My Searchbar</h4>
-        <!-- <form action="mysite.com/api/customers" method="GET"></form> -->
-        <form action="https://bbc.co.uk/search" target="_blank">
-            <label for="search">Search</label>
-            <input type="text" id="search" name="q">
-            <input type="submit" value="Submit">
-        </form>
         <small>Copyright &#169; Sparta Global 2023 <cite>by P. Ardagh-Walter</cite></small>
     </footer>
 </body>
