--- a/projects.html
+++ b/projects.html
@@ -5,19 +5,25 @@
 <head>
     <meta charset="utf-8" />
     <title>My projects</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="profileStyles.css" rel="stylesheet">
 </head>
 
-<body onload="greeting()">
+<body>
     <nav class="container">
         <ul class="flex-container">
             <li><a href="index.html">Go to profile</a></li>
             <li><a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a></li>
+            <li><form action="https://www.google.com/search" target="_blank">
+                <label for="search">Search</label>
+                <input type="text" id="search" name="q">
+                <input type="submit" value="Submit">
+            </form></li>
         </ul>
     </nav>
     <section>
-        <h1>Projects</h1>
+        ,<header class="heading"><h2>Projects</h2></header>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -40,19 +46,12 @@
             </tbody>
         </table>
     </section>
-    <section id="game-container">
+    <section class="game-container" id="game-container">
         <h2 id="game-title">Javascript Game</h2>
-        <!-- <button onclick=greeting()>Click Me</button> -->
-        <p>Score: <span id="score">0</span></p>
+        <button id="start-button" onclick=openGame()>Open Game</button>
+        <!-- <p>Score: <span id="score">0</span></p> -->
     </section>
-    <script defer>
-        // document.write("Hello There!");
-        // console.log("Page loaded successfully.");
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js" defer></script>
-    <script src="src/balloon.js"></script>
-    <script src="src/game.js"></script>
+    <script src="src/gameloader.js"></script>
 
 </body>
 
