--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
