most of style sheet fixed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <header class="heading">
         <h2>Patrick Ardagh-Walter</h2>
-        <p>A <em>emphasised</em> <strong>demonstration</strong> of a paragraph.</p>
+        <p class="container">A <em>emphasised</em> <strong>demonstration</strong> of a paragraph.</p>
         <img src="./Images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." class="centredImage">
     </header>
     <section class="container">
