--- a/projects.html
+++ b/projects.html
@@ -12,16 +12,14 @@
 </head>
 
 <body>
-    <nav class="container">
-        <ul class="flex-container">
-            <li><a href="index.html">Go to profile</a></li>
-            <li><a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a></li>
-            <li><form action="https://www.google.com/search" target="_blank">
-                <label for="search">Search</label>
-                <input type="text" id="search" name="q">
-                <input type="submit" value="Submit">
-            </form></li>
-        </ul>
+    <nav>
+        <a href="index.html">Go to profile</a>
+        <a href="https://www.linkedin.com/in/patrick-ardagh-walter-163104183/" target="_blank">My LinkedIn</a>
+        <form action="https://www.google.com/search" target="_blank">
+            <label for="search">Search</label>
+            <input type="text" id="search" name="q">
+            <input type="submit" value="Submit">
+        </form>
     </nav>
     <section>
         ,<header class="heading"><h2>Projects</h2></header>
@@ -53,7 +51,8 @@
         <!-- <p>Score: <span id="score">0</span></p> -->
     </section>
     <script src="src/gameloader.js"></script>
-
 </body>
-
+<footer>
+    <small>Copyright &#169; Sparta Global 2023 <cite>by P. Ardagh-Walter</cite></small>
+</footer>
 </html>
