improved the setup of my profile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <header class="heading">
         <h2>Patrick Ardagh-Walter</h2>
-        <p class="container">A <em>emphasised</em> <strong>demonstration</strong> of a paragraph.</p>
+        <p class="container">Welcome to my profile, where you can find out a little more about me!</p>
         <img src="./Images/SpartaProfileImagePA-WCropped.jpg" alt="A profile picture of me." class="centredImage">
     </header>
     <section class="container">
@@ -36,6 +36,8 @@
             <li>Agile and Scrum Methodology</li>
             <li>C# Programming</li>
             <li>Source Control</li>
+            <li>Unity Engine</li>
+            <li>Unreal Engine 5</li>
         </ul>
     </section>
     <section class="container">
@@ -51,9 +53,9 @@
     <section class="container">
         <h3>My Goals</h3>
         <ul>
-            <li>Permanent Employment</li>
-            <li>To publish a tabletop rpg</li>
-            <li>To grasp the fundamental meaning of reality</li>
+            <li>To work as a C# developer.</li>
+            <li>To publish a tabletop rpg.</li>
+            <li>To publish a fantasy novel.</li>
         </ul>
     </section>
     <footer>
