--- a/projects.html
+++ b/projects.html
@@ -33,13 +33,23 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Agile Project</td>
-                    <td>Did some stuff with user stories</td>
+                    <td>Powershell Project</td>
+                    <td>Created a powershell script to check the size of files in a folder.</td>
                     <td>2023</td>
                 </tr>
                 <tr>
-                    <td>Safari Park Project</td>
-                    <td>Demonstrated polymorphism</td>
+                    <td>SCRUM Project</td>
+                    <td>Learned how to put together user stories for a project.</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>Basic C#</td>
+                    <td>Ran through the basics of methods, operators, control flow, data types, and exceptions.</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>Unit Testing</td>
+                    <td>Learned how to use NUnit to test projects.</td>
                     <td>2023</td>
                 </tr>
             </tbody>
